--- a/HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb
+++ b/HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKD4F0a36bF6f6IWBrUFxb",
+      "authorship_tag": "ABX9TyMQBJYwN5DMj6F638tZV2kb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3599,6 +3599,343 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PROJECT = \"/content/hermes-reply-fase5\"\n",
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"\n",
+        "\n",
+        "# Sincroniza cada pasta (sem o sensors.db)\n",
+        "!rsync -a --delete --exclude 'sensors.db' {PROJECT}/ddl/ {REPO_DIR}/ddl/\n",
+        "!rsync -a --delete {PROJECT}/src/ {REPO_DIR}/src/\n",
+        "!rsync -a --delete {PROJECT}/images/ {REPO_DIR}/images/\n",
+        "!rsync -a --delete {PROJECT}/reports/ {REPO_DIR}/reports/  || true  # se não existir, ignora\n",
+        "\n",
+        "# Commit + push\n",
+        "!git -C {REPO_DIR} add -A\n",
+        "!git -C {REPO_DIR} commit -m \"Add ddl/src/images/reports\" || echo \"Nada novo para commitar\"\n",
+        "!git -C {REPO_DIR} pull --rebase origin main || true\n",
+        "!git -C {REPO_DIR} push -u origin main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OwBaj4Q1-T1l",
+        "outputId": "1291f235-0f4b-457d-cef4-a1db7ff099cd"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch master\n",
+            "nothing to commit, working tree clean\n",
+            "Nada novo para commitar\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 3 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (3/3), 2.77 KiB | 472.00 KiB/s, done.\n",
+            "From github.com:flahbocchino/hermes-reply-fase5\n",
+            " * branch            main       -> FETCH_HEAD\n",
+            "   0633312..f0c3aee  main       -> origin/main\n",
+            "Auto-merging .gitignore\n",
+            "CONFLICT (add/add): Merge conflict in .gitignore\n",
+            "Auto-merging README.md\n",
+            "CONFLICT (add/add): Merge conflict in README.md\n",
+            "error: could not apply 5e63b6a... Sync do Colab (ddl/src/imagens)\n",
+            "\u001b[33mhint: Resolve all conflicts manually, mark them as resolved with\u001b[m\n",
+            "\u001b[33mhint: \"git add/rm <conflicted_files>\", then run \"git rebase --continue\".\u001b[m\n",
+            "\u001b[33mhint: You can instead skip this commit: run \"git rebase --skip\".\u001b[m\n",
+            "\u001b[33mhint: To abort and get back to the state before \"git rebase\", run \"git rebase --abort\".\u001b[m\n",
+            "Could not apply 5e63b6a... Sync do Colab (ddl/src/imagens)\n",
+            "error: src refspec main does not match any\n",
+            "\u001b[31merror: failed to push some refs to 'github.com:flahbocchino/hermes-reply-fase5.git'\n",
+            "\u001b[m"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"\n",
+        "\n",
+        "!git -C \"{REPO_DIR}\" status\n",
+        "!git -C \"{REPO_DIR}\" branch -vv\n",
+        "!git -C \"{REPO_DIR}\" remote -v\n",
+        "!git -C \"{REPO_DIR}\" log --oneline -n 10\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GmGeh_tEAzO_",
+        "outputId": "1a8001e5-4b54-49c9-9044-f3ad6753a18a"
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31minteractive rebase in progress; onto \u001b[mf0c3aee\n",
+            "Last command done (1 command done):\n",
+            "   pick 5e63b6a Sync do Colab (ddl/src/imagens)\n",
+            "No commands remaining.\n",
+            "You are currently rebasing branch 'master' on 'f0c3aee'.\n",
+            "  (fix conflicts and then run \"git rebase --continue\")\n",
+            "  (use \"git rebase --skip\" to skip this patch)\n",
+            "  (use \"git rebase --abort\" to check out the original branch)\n",
+            "\n",
+            "Changes to be committed:\n",
+            "  (use \"git restore --staged <file>...\" to unstage)\n",
+            "\t\u001b[32mnew file:   data/assets.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/readings.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/sensor_types.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/sensors.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/sites.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/thresholds.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/units.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   ddl/schema.sql\u001b[m\n",
+            "\t\u001b[32mnew file:   images/confusion_matrix.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/confusion_matrix_from_script.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/er_diagram.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/leituras_por_tipo.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/serie_sensor_1.png\u001b[m\n",
+            "\t\u001b[32mnew file:   reports/train_log.txt\u001b[m\n",
+            "\t\u001b[32mnew file:   sensors.db\u001b[m\n",
+            "\t\u001b[32mnew file:   src/train_ml.py\u001b[m\n",
+            "\n",
+            "Unmerged paths:\n",
+            "  (use \"git restore --staged <file>...\" to unstage)\n",
+            "  (use \"git add <file>...\" to mark resolution)\n",
+            "\t\u001b[31mboth added:      .gitignore\u001b[m\n",
+            "\t\u001b[31mboth added:      README.md\u001b[m\n",
+            "\n",
+            "* \u001b[32m(no branch, rebasing master)\u001b[m f0c3aee Criado usando o Colab\n",
+            "  master                      \u001b[m 5e63b6a Sync do Colab (ddl/src/imagens)\n",
+            "origin\tgit@github.com:flahbocchino/hermes-reply-fase5.git (fetch)\n",
+            "origin\tgit@github.com:flahbocchino/hermes-reply-fase5.git (push)\n",
+            "\u001b[33mf0c3aee\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD\u001b[m\u001b[33m, \u001b[m\u001b[1;31morigin/main\u001b[m\u001b[33m)\u001b[m Criado usando o Colab\n",
+            "\u001b[33m0633312\u001b[m Criado usando o Colab\n",
+            "\u001b[33m0c9935e\u001b[m Criado usando o Colab\n",
+            "\u001b[33mdbf0e2b\u001b[m Publica ddl/src/images; ignora sensors.db\n",
+            "\u001b[33m8ff59e9\u001b[m Criado usando o Colab\n",
+            "\u001b[33m70024ec\u001b[m Update README.md\n",
+            "\u001b[33m99b78ce\u001b[m README.md\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"\n",
+        "!rm -rf \"{REPO_DIR}\"\n"
+      ],
+      "metadata": {
+        "id": "e-17IhfZA3s8"
+      },
+      "execution_count": 148,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"\n",
+        "\n",
+        "!git -C \"{REPO_DIR}\" pull --rebase origin main || true\n",
+        "!git -C \"{REPO_DIR}\" add -A\n",
+        "!git -C \"{REPO_DIR}\" commit -m \"Sync do Colab (ddl/src/images)\" || true\n",
+        "!git -C \"{REPO_DIR}\" push -u origin main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HB2ppqiHA6_i",
+        "outputId": "3ccfab4a-b56e-4973-8151-e3904b4d234b"
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: cannot change to '/content/hermes-reply-fase5-repo': No such file or directory\n",
+            "fatal: cannot change to '/content/hermes-reply-fase5-repo': No such file or directory\n",
+            "fatal: cannot change to '/content/hermes-reply-fase5-repo': No such file or directory\n",
+            "fatal: cannot change to '/content/hermes-reply-fase5-repo': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PROJECT = \"/content/hermes-reply-fase5\"        # sua pasta de trabalho\n",
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"  # pasta do repositório (git)\n",
+        "\n",
+        "# cria a pasta do repo se não existir\n",
+        "!mkdir -p \"{REPO_DIR}\"\n",
+        "\n",
+        "# sincroniza do PROJECT -> REPO_DIR, ignorando arquivos/pastas grandes/temporários\n",
+        "!rsync -a --delete --exclude 'sensors.db' --exclude '__pycache__/' --exclude '.ipynb_checkpoints/' \"{PROJECT}/\" \"{REPO_DIR}/\"\n"
+      ],
+      "metadata": {
+        "id": "_RufTSK2Bfa0"
+      },
+      "execution_count": 150,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "cat > /content/hermes-reply-fase5-repo/.gitignore <<'EOF'\n",
+        "sensors.db\n",
+        "__pycache__/\n",
+        ".ipynb_checkpoints/\n",
+        "EOF\n"
+      ],
+      "metadata": {
+        "id": "xZ4spGNIBh5I"
+      },
+      "execution_count": 151,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git -C \"{REPO_DIR}\" rev-parse --is-inside-work-tree || git -C \"{REPO_DIR}\" init\n",
+        "!git -C \"{REPO_DIR}\" config user.name \"flahbocchino\"\n",
+        "!git -C \"{REPO_DIR}\" config user.email \"flahbocchino@users.noreply.github.com\"\n",
+        "\n",
+        "# remoto via Deploy Key (SSH)\n",
+        "!git -C \"{REPO_DIR}\" remote remove origin || true\n",
+        "!git -C \"{REPO_DIR}\" remote add origin git@github.com:flahbocchino/hermes-reply-fase5.git\n",
+        "!git -C \"{REPO_DIR}\" branch -M main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HvkfIwgMBkYi",
+        "outputId": "7700d740-d574-4c9e-b0de-f04ab2523b35"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "\u001b[33mhint: Using 'master' as the name for the initial branch. This default branch name\u001b[m\n",
+            "\u001b[33mhint: is subject to change. To configure the initial branch name to use in all\u001b[m\n",
+            "\u001b[33mhint: of your new repositories, which will suppress this warning, call:\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: \tgit config --global init.defaultBranch <name>\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: Names commonly chosen instead of 'master' are 'main', 'trunk' and\u001b[m\n",
+            "\u001b[33mhint: 'development'. The just-created branch can be renamed via this command:\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: \tgit branch -m <name>\u001b[m\n",
+            "Initialized empty Git repository in /content/hermes-reply-fase5-repo/.git/\n",
+            "error: No such remote: 'origin'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git -C \"{REPO_DIR}\" add -A\n",
+        "!git -C \"{REPO_DIR}\" commit -m \"Recria repo local a partir do Colab\" || echo \"Nada novo para commitar\"\n",
+        "!git -C \"{REPO_DIR}\" pull --rebase origin main || true\n",
+        "!git -C \"{REPO_DIR}\" push -u origin main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g0F7gCntBnbU",
+        "outputId": "5ee0f176-a00b-47bc-87fe-3adf671cf8ff"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[main (root-commit) fb72b33] Recria repo local a partir do Colab\n",
+            " 17 files changed, 9253 insertions(+)\n",
+            " create mode 100644 .gitignore\n",
+            " create mode 100644 README.md\n",
+            " create mode 100644 data/assets.csv\n",
+            " create mode 100644 data/readings.csv\n",
+            " create mode 100644 data/sensor_types.csv\n",
+            " create mode 100644 data/sensors.csv\n",
+            " create mode 100644 data/sites.csv\n",
+            " create mode 100644 data/thresholds.csv\n",
+            " create mode 100644 data/units.csv\n",
+            " create mode 100644 ddl/schema.sql\n",
+            " create mode 100644 images/confusion_matrix.png\n",
+            " create mode 100644 images/confusion_matrix_from_script.png\n",
+            " create mode 100644 images/er_diagram.png\n",
+            " create mode 100644 images/leituras_por_tipo.png\n",
+            " create mode 100644 images/serie_sensor_1.png\n",
+            " create mode 100644 reports/train_log.txt\n",
+            " create mode 100644 src/train_ml.py\n",
+            "remote: Enumerating objects: 21, done.\u001b[K\n",
+            "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
+            "remote: Total 21 (delta 8), reused 2 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (21/21), 51.01 KiB | 2.13 MiB/s, done.\n",
+            "From github.com:flahbocchino/hermes-reply-fase5\n",
+            " * branch            main       -> FETCH_HEAD\n",
+            " * [new branch]      main       -> origin/main\n",
+            "Auto-merging README.md\n",
+            "CONFLICT (add/add): Merge conflict in README.md\n",
+            "error: could not apply fb72b33... Recria repo local a partir do Colab\n",
+            "\u001b[33mhint: Resolve all conflicts manually, mark them as resolved with\u001b[m\n",
+            "\u001b[33mhint: \"git add/rm <conflicted_files>\", then run \"git rebase --continue\".\u001b[m\n",
+            "\u001b[33mhint: You can instead skip this commit: run \"git rebase --skip\".\u001b[m\n",
+            "\u001b[33mhint: To abort and get back to the state before \"git rebase\", run \"git rebase --abort\".\u001b[m\n",
+            "Could not apply fb72b33... Recria repo local a partir do Colab\n",
+            "To github.com:flahbocchino/hermes-reply-fase5.git\n",
+            " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
+            "\u001b[31merror: failed to push some refs to 'github.com:flahbocchino/hermes-reply-fase5.git'\n",
+            "\u001b[m\u001b[33mhint: Updates were rejected because a pushed branch tip is behind its remote\u001b[m\n",
+            "\u001b[33mhint: counterpart. Check out this branch and integrate the remote changes\u001b[m\n",
+            "\u001b[33mhint: (e.g. 'git pull ...') before pushing again.\u001b[m\n",
+            "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"\n"
+      ],
+      "metadata": {
+        "id": "xBlxh5B6CWt5"
+      },
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CAbRyJ42FvFs"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
