--- a/notebooks/ML_basico.ipynb
+++ b/notebooks/ML_basico.ipynb
@@ -23,22 +23,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7JnJF3p_Ypif",
-        "outputId": "36178637-8b6f-4d01-e7b8-828e1a58da82"
+        "outputId": "0dc736c4-91f1-4944-84e0-3e228226bc44"
       },
       "id": "7JnJF3p_Ypif",
-      "execution_count": 26,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'hermes-reply-fase5'...\n",
-            "remote: Enumerating objects: 10, done.\u001b[K\n",
-            "remote: Counting objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (8/8), done.\u001b[K\n",
-            "remote: Total 10 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (10/10), 5.73 KiB | 5.73 MiB/s, done.\n",
-            "/content/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5\n"
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Total 11 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (11/11), 31.66 KiB | 1.05 MiB/s, done.\n",
+            "/content/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5\n"
           ]
         }
       ]
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 37,
       "metadata": {
         "id": "OGJUSPkBYem_"
       },
@@ -161,10 +161,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BjwbJcuNbA65",
-        "outputId": "d789439e-5022-4200-f7fc-ff9c6f6ef06b"
+        "outputId": "37136606-94ba-4466-c6ed-e81f47034fa1"
       },
       "id": "BjwbJcuNbA65",
-      "execution_count": 28,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,10 +246,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ePC7XRAZclPc",
-        "outputId": "46147288-50f3-4487-af12-3be79e0f7ae5"
+        "outputId": "fdeb290b-abf4-48d7-dfbf-b6c666f3922f"
       },
       "id": "ePC7XRAZclPc",
-      "execution_count": 29,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,10 +306,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yPhNZEqfeBnE",
-        "outputId": "9bc96c05-f179-47c6-d7bc-69e463d64164"
+        "outputId": "c87c3243-854e-4c8c-835e-901cfecea9ba"
       },
       "id": "yPhNZEqfeBnE",
-      "execution_count": 30,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,14 +323,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
         "id": "v7RGGl-fYenA",
-        "outputId": "a636e32f-7cf7-4bfd-bd7c-6201caec5d45"
+        "outputId": "f216db48-9660-41ce-be3e-3f21a99f5aa5"
       },
       "outputs": [
         {
@@ -363,7 +363,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7dc7ced9-3746-4d68-8de6-0d0c8e2ec523\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0089959c-d91a-4469-9d2a-248816cef4a6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -509,7 +509,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7dc7ced9-3746-4d68-8de6-0d0c8e2ec523')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0089959c-d91a-4469-9d2a-248816cef4a6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -561,12 +561,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7dc7ced9-3746-4d68-8de6-0d0c8e2ec523 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0089959c-d91a-4469-9d2a-248816cef4a6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7dc7ced9-3746-4d68-8de6-0d0c8e2ec523');\n",
+              "        const element = document.querySelector('#df-0089959c-d91a-4469-9d2a-248816cef4a6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -586,8 +586,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b0bb61a2-febe-4dc5-84bb-6fbc9fbaaad3\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b0bb61a2-febe-4dc5-84bb-6fbc9fbaaad3')\"\n",
+              "    <div id=\"df-32ece0ab-6fdc-4275-8650-ddc8e814cc5e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-32ece0ab-6fdc-4275-8650-ddc8e814cc5e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -706,7 +706,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b0bb61a2-febe-4dc5-84bb-6fbc9fbaaad3 button');\n",
+              "            document.querySelector('#df-32ece0ab-6fdc-4275-8650-ddc8e814cc5e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -723,7 +723,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 41
         }
       ],
       "source": [
@@ -743,13 +743,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9141F8OUYenB",
-        "outputId": "361c81ad-fcad-449b-e5de-ec120cdfbafb"
+        "outputId": "e07f54a3-190f-48a5-857d-f534307a6314"
       },
       "outputs": [
         {
@@ -780,7 +780,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 42
         }
       ],
       "source": [
@@ -811,13 +811,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "# parâmetros\n",
+        "n_sensors = 5          # número de sensores simulados\n",
+        "n_machines = 3         # número de máquinas simuladas\n",
+        "n_readings = 600       # leituras por sensor (>=500)\n",
+        "\n",
+        "# simulação de leituras\n",
+        "np.random.seed(42)\n",
+        "rows = []\n",
+        "for m in range(1, n_machines+1):\n",
+        "    for s in range(1, n_sensors+1):\n",
+        "        for i in range(n_readings):\n",
+        "            rows.append({\n",
+        "                \"machine_id\": m,\n",
+        "                \"sensor_id\": s,\n",
+        "                \"timestamp\": pd.Timestamp(\"2025-01-01\") + pd.Timedelta(minutes=i),\n",
+        "                \"value\": np.random.normal(loc=50, scale=10),  # valor simulado\n",
+        "                \"is_anomaly\": np.random.choice([0, 1], p=[0.9, 0.1])  # 10% de anomalia\n",
+        "            })\n",
+        "\n",
+        "df_big = pd.DataFrame(rows)\n",
+        "\n",
+        "# salvar no diretório data/\n",
+        "df_big.to_csv(\"data/sensor_readings.csv\", index=False)\n",
+        "\n",
+        "print(\"Dataset salvo em data/sensor_readings.csv\")\n",
+        "print(\"Total de linhas:\", len(df_big))\n",
+        "print(df_big.head())\n"
+      ],
+      "metadata": {
+        "id": "Ym5I074lkGxH",
+        "outputId": "caeccf39-3f49-440f-df71-ec9f187e2099",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Ym5I074lkGxH",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset salvo em data/sensor_readings.csv\n",
+            "Total de linhas: 9000\n",
+            "   machine_id  sensor_id           timestamp      value  is_anomaly\n",
+            "0           1          1 2025-01-01 00:00:00  54.967142           0\n",
+            "1           1          1 2025-01-01 00:01:00  48.617357           0\n",
+            "2           1          1 2025-01-01 00:02:00  47.658466           0\n",
+            "3           1          1 2025-01-01 00:03:00  47.658630           0\n",
+            "4           1          1 2025-01-01 00:04:00  65.792128           0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2I-x43fRYenC",
-        "outputId": "550e914d-3961-426e-8a86-afc83423d65c"
+        "outputId": "ba775561-b16c-4f8b-dbd6-1ab8b6fbe5a4"
       },
       "outputs": [
         {
@@ -913,14 +973,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
         "id": "lVI0IWczYenC",
-        "outputId": "ebf3739c-5612-4104-e914-81470ceea277"
+        "outputId": "0012ea48-a5a1-4f59-bcd1-f89f0396f077"
       },
       "outputs": [
         {
