--- a/notebooks/ML_basico.ipynb
+++ b/notebooks/ML_basico.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/flahbocchino/hermes-reply-fase5/blob/main/notebooks/ML_basico.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "!git clone --depth 1 https://github.com/flahbocchino/hermes-reply-fase5.git\n",
@@ -23,10 +13,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7JnJF3p_Ypif",
-        "outputId": "0dc736c4-91f1-4944-84e0-3e228226bc44"
+        "outputId": "aa0ab23e-4abd-423e-97d2-fb2cb117a3d3"
       },
       "id": "7JnJF3p_Ypif",
-      "execution_count": 36,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -37,8 +27,8 @@
             "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
             "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
             "remote: Total 11 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (11/11), 31.66 KiB | 1.05 MiB/s, done.\n",
-            "/content/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5\n"
+            "Receiving objects: 100% (11/11), 32.23 KiB | 2.30 MiB/s, done.\n",
+            "/content/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5/hermes-reply-fase5\n"
           ]
         }
       ]
@@ -62,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 57,
       "metadata": {
         "id": "OGJUSPkBYem_"
       },
@@ -161,10 +151,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BjwbJcuNbA65",
-        "outputId": "37136606-94ba-4466-c6ed-e81f47034fa1"
+        "outputId": "5a1f0012-9806-4600-8fb2-80cffb6f2fbe"
       },
       "id": "BjwbJcuNbA65",
-      "execution_count": 38,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,10 +236,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ePC7XRAZclPc",
-        "outputId": "fdeb290b-abf4-48d7-dfbf-b6c666f3922f"
+        "outputId": "d151b66d-c678-4ce3-c0d3-083989583e8a"
       },
       "id": "ePC7XRAZclPc",
-      "execution_count": 39,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,10 +296,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yPhNZEqfeBnE",
-        "outputId": "c87c3243-854e-4c8c-835e-901cfecea9ba"
+        "outputId": "f1607a18-5bf2-4e6a-ee05-9d583facdc6c"
       },
       "id": "yPhNZEqfeBnE",
-      "execution_count": 40,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,14 +313,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
         "id": "v7RGGl-fYenA",
-        "outputId": "f216db48-9660-41ce-be3e-3f21a99f5aa5"
+        "outputId": "eec5cbd7-05e3-4935-92c3-2604b2032a46"
       },
       "outputs": [
         {
@@ -363,7 +353,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0089959c-d91a-4469-9d2a-248816cef4a6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0acf5ae0-dd11-447b-b793-fb4b4107213f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -509,7 +499,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0089959c-d91a-4469-9d2a-248816cef4a6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0acf5ae0-dd11-447b-b793-fb4b4107213f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -561,12 +551,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0089959c-d91a-4469-9d2a-248816cef4a6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0acf5ae0-dd11-447b-b793-fb4b4107213f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0089959c-d91a-4469-9d2a-248816cef4a6');\n",
+              "        const element = document.querySelector('#df-0acf5ae0-dd11-447b-b793-fb4b4107213f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -586,8 +576,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-32ece0ab-6fdc-4275-8650-ddc8e814cc5e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-32ece0ab-6fdc-4275-8650-ddc8e814cc5e')\"\n",
+              "    <div id=\"df-f2bc337c-3333-464f-870a-e97b356ca3a3\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f2bc337c-3333-464f-870a-e97b356ca3a3')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -706,7 +696,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-32ece0ab-6fdc-4275-8650-ddc8e814cc5e button');\n",
+              "            document.querySelector('#df-f2bc337c-3333-464f-870a-e97b356ca3a3 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -723,7 +713,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 61
         }
       ],
       "source": [
@@ -743,13 +733,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9141F8OUYenB",
-        "outputId": "e07f54a3-190f-48a5-857d-f534307a6314"
+        "outputId": "1cc8084d-f28e-4cf1-f025-228ca903f6b9"
       },
       "outputs": [
         {
@@ -780,7 +770,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 62
         }
       ],
       "source": [
@@ -844,14 +834,14 @@
         "print(df_big.head())\n"
       ],
       "metadata": {
-        "id": "Ym5I074lkGxH",
-        "outputId": "caeccf39-3f49-440f-df71-ec9f187e2099",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ym5I074lkGxH",
+        "outputId": "d7682c36-74c6-464e-f464-c8150d7f3c5e"
       },
       "id": "Ym5I074lkGxH",
-      "execution_count": 43,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -871,13 +861,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2I-x43fRYenC",
-        "outputId": "ba775561-b16c-4f8b-dbd6-1ab8b6fbe5a4"
+        "outputId": "8ab77166-1767-4e94-e46d-b74f44005512"
       },
       "outputs": [
         {
@@ -973,14 +963,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
         "id": "lVI0IWczYenC",
-        "outputId": "0012ea48-a5a1-4f59-bcd1-f89f0396f077"
+        "outputId": "4d208560-70a8-4b63-aa0f-78c88472f872"
       },
       "outputs": [
         {
@@ -1070,8 +1060,7 @@
       "version": "3.10"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
